# jira-database-etl

./: .gitignore  LICENSE  Pipfile  README.md  __main__.py  config.py  data.py  db.py  fetch.py  main.py  models.py  pyproject.toml  requirements.py  requirements.txt  setup.py
application/: __init__.py
data/: epics.csv
jira_database_etl/: __init__.py  db.py  jirafetch.py  transform.py
jira_etl/: data.py  db.py  fetch.py
jira_etl/datafiles/: csv_export_path.csv
jiraserverless/: __init__.py  data.py  db.py  fetch.py  main.py
jiraserverless/datafiles/: jiratestNEW.csv
src/: __init__.py  db.py  jirafetch.py  transform.py
