[tool.poetry]
name = "jira_database_etl"
version = "0.1.0"
description = "Script to import issues from a JIRA instance into a database."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/jira-to-sql-etl/"
repository = "https://github.com/toddbirchard/jira-database-etl/"
documentation = "https://hackersandslackers.com/jira-to-sql-etl/"
keywords = [
    "Jira",
    "ETL",
    "Database",
    "Python",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
sqlalchemy = "*"
pymysql = "*"
pandas = "*"
python-dotenv = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:init_script"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/jira-database-etl/issues"